--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "cargo-test"
+name = "cargo-testf"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A wrapper for `cargo test` that remembers and runs failed tests"
 
 [dependencies]
+# no dependency to be added to maintain a thin profile.
